[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/img/timer-24.png" type="Texture" id=1]
[ext_resource path="res://assets/img/glass_320.png" type="Texture" id=2]
[ext_resource path="res://assets/img/green_320.png" type="Texture" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/img/score_24.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://tscn/HUD.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_right = 388.0
margin_bottom = -732.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 5.0
margin_right = 385.0
margin_bottom = 31.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeContainer" type="HBoxContainer" parent="Margin/HBoxContainer"]
margin_right = 365.0
margin_bottom = 26.0

[node name="TimeTexture" type="TextureRect" parent="Margin/HBoxContainer/TimeContainer"]
margin_right = 24.0
margin_bottom = 26.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="TimeBar" type="TextureProgress" parent="Margin/HBoxContainer/TimeContainer"]
margin_left = 28.0
margin_right = 348.0
margin_bottom = 26.0
mouse_filter = 2
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="Time" type="Label" parent="Margin/HBoxContainer/TimeContainer"]
margin_left = 352.0
margin_top = 2.0
margin_right = 365.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="ScoreMargin" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_bottom = 44.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="HBoxContainer" parent="ScoreMargin"]
margin_top = 5.0
margin_right = 290.0
margin_bottom = 44.0
custom_constants/separation = 20

[node name="LevelTitle" type="Label" parent="ScoreMargin/ScoreContainer"]
margin_top = 4.0
margin_right = 71.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Level"

[node name="Level" type="Label" parent="ScoreMargin/ScoreContainer"]
margin_left = 91.0
margin_right = 114.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="ScoreTexture" type="TextureButton" parent="ScoreMargin/ScoreContainer"]
margin_left = 134.0
margin_right = 158.0
margin_bottom = 39.0
mouse_filter = 2
texture_normal = ExtResource( 5 )

[node name="Score" type="Label" parent="ScoreMargin/ScoreContainer"]
margin_left = 178.0
margin_right = 201.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
text = "0"
